# resonance-logs-cn

./: .gitignore  CHANGELOG.md  README.md  package.json  vite.config.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/meter-data/: BuffName.json  FightAttrTable.json  MonsterNameBoss.json  RecountTable.json  SceneName.json  Talent.json
src-tauri/src/: lib.rs
src-tauri/src/live/: buff_names.rs  commands.rs  commands_models.rs  dungeon_log.rs  event_manager.rs  fight_attr.rs  mod.rs  opcodes_models.rs  opcodes_process.rs  state.rs
src-tauri/src/module_optimizer/: commands.rs  mod.rs
src-tauri/src/module_optimizer/cpp/: ffi_bridge.cpp  module_optimizer.cpp  module_optimizer.h  module_optimizer_cuda.cu  module_optimizer_opencl.cpp
src/lib/: api.ts  bindings.ts  class-labels.ts  settings-store.ts  utils.svelte.ts
src/lib/config/: MonsterName.json  class-attributes.json
src/lib/stores/: module-calc-store.svelte.ts
src/routes/attr-monitor/: +page.svelte
src/routes/game-overlay/: +page.svelte
src/routes/game-overlay/components/: AttrPanel.svelte  BuffGroup.svelte  IconBuff.svelte  MonsterHealthPanel.svelte  ResourcePanel.svelte  SkillCdGrid.svelte  SpecialBuff.svelte  TextBuffPanel.svelte
src/routes/game-overlay/lib/: drag-resize.ts  store.ts  transformers.ts  utils.ts
src/routes/live/: header-custom.svelte
src/routes/main/: routes.svelte.ts
src/routes/main/dps/settings/: settings-switch.svelte  shortcuts.svelte  shortcuts.ts
src/routes/main/module-calc/: +page.svelte  filter-settings.svelte  module-detail.svelte  results-table.svelte
src/routes/main/overlay-settings/: +layout.svelte  +page.svelte
src/routes/main/overlay-settings/components/: BasicSettings.svelte  BuffGroupConfig.svelte  BuffGroupContent.svelte  BuffGroupManager.svelte  BuffManager.svelte  BuffMonitor.svelte  BuffSearch.svelte  BuffSettings.svelte  GlobalPriority.svelte  IndividualMonitorAll.svelte  MonsterHpSettings.svelte  OverlaySettings.svelte  ProfileManager.svelte  ShortcutSettings.svelte  SkillMonitor.svelte  SkillSettings.svelte  Tabs.svelte  TestSettings.svelte
src/routes/main/overlay-settings/lib/: buff-group-store.ts  buff-utils.ts  group-utils.ts  profile-store.ts  profile-updater.ts  skill-utils.ts
