[package]
name = "resonance-logs-cn"
version = "0.0.5"
description = "Blue Protocol: Star Resonance DPS Meter"
authors = ["Keberrye", "Deusexitium"]
license = "AGPL-3.0-only"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "resonance_logs_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.2", features = [] }
serde_json = "1"
cxx-build = "1.0"
cc = "1.0"

[dependencies]
# image-png for frontend
tauri = { version = "2.10.1", features = ["tray-icon", "image-png"] }
serde = { version = "1.0.219", features = ["derive"] }
tauri-plugin-single-instance = "2.3.4"
tracing = "0.1"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
chrono = "0.4.41"
windivert = {version = "0.6.0", features = ["vendored"] }
etherparse = "0.19.0"
tokio = {version = "1.47.1", features = ["macros"] }
log = "0.4.28"
bytes = "1.10.1"
zstd = "0.13.3"
bincode = { version = "2", features = ["serde"] }
rmp-serde = "1.3"
byteorder = "1.5.0"
prost = "0.14.1"
specta = "2.0.0-rc.21"
specta-typescript = "0.0.9"
tauri-specta = {version = "2.0.0-rc.21", features = ["typescript"] }
tauri-plugin-window-state = "2.4.0"
serde_json = { version = "1.0.145", features = ["arbitrary_precision"] }
window-vibrancy = "0.6.0"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-svelte = "3"
tauri-plugin-os = "2"
tauri-plugin-opener = "2.5.2"
tauri-plugin-dialog = "2"
ts-rs = "11.1.0"
chrono-tz = "0.10.4"
diesel = { version = "2.2.4", features = ["sqlite", "chrono", "64-column-tables"] }
diesel_migrations = "2.2.0"
thiserror = "2.0.17"
parking_lot = "0.12.3"
tokio-util = { version = "0.7.12", features = ["rt"] }
once_cell = "1.21.3"
libsqlite3-sys = { version = "0.30.1", features = ["bundled"] }
dirs = "6.0.0"
sha2 = "0.10"
hex = "0.4"
libloading = "0.9.0"
libc = "0.2.177"
cxx = "1.0"

[dependencies.blueprotobuf-lib]
path = "./src/blueprotobuf-lib"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2.3.1"
tauri-plugin-updater = "2.10.0"

[dev-dependencies]
rand = "0.9.2"

